--- a/app/src/main/res/menu/filter_menu.xml
+++ b/app/src/main/res/menu/filter_menu.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/filter"
-        android:icon="@drawable/ic_baseline_filter_list_24"
-        app:showAsAction="always">
-        <menu>
-            <item
-                android:id="@+id/action_menu1"
-                android:title="@string/filter_option_1"/>
-            <item
-                android:id="@+id/action_menu2"
-                android:title="@string/filter_option_2"/>
-        </menu>
-    </item>
+        android:id="@+id/filter_date"
+        android:title="@string/filter_option_1"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/filter_room"
+        android:title="@string/filter_option_2"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/filters_reset"
+        android:title="@string/filter_reset"
+        app:showAsAction="never"/>
 </menu>
