--- a/app/src/main/res/layout/fragment_add_meeting.xml
+++ b/app/src/main/res/layout/fragment_add_meeting.xml
@@ -9,7 +9,7 @@
         android:id="@+id/txtViewSubject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subject"
+        android:text="Sujet"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
-        android:hint="Meeting subject"
+        android:hint="Sujet de la réunion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -53,7 +53,7 @@
         android:id="@+id/edtParticipants"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Each participant in line"
+        android:hint="Un participant par ligne"
         android:inputType="textMultiLine|textEmailAddress"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
@@ -68,7 +68,7 @@
         android:id="@+id/txtViewRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Room"
+        android:text="Salle"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -112,6 +112,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:inputType="time"
+        android:hint="Heure de la réunion"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -123,10 +124,10 @@
 
     <Button
         android:id="@+id/btnTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Pick time"
         android:textSize="10sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/btnAddMeeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.874"
