--- a/app/src/main/res/layout/activity_list_meeting.xml
+++ b/app/src/main/res/layout/activity_list_meeting.xml
@@ -28,6 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.962"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/white"
+        android:contentDescription="@string/add_new_meeting" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
