--- a/app/src/main/res/layout/fragment_add_meeting.xml
+++ b/app/src/main/res/layout/fragment_add_meeting.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
@@ -9,7 +10,7 @@
         android:id="@+id/txtViewSubject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sujet"
+        android:text="@string/subject"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -26,19 +27,21 @@
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
-        android:hint="Sujet de la réunion"
+        android:hint="@string/hint_subject"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewSubject"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
     <TextView
         android:id="@+id/txtViewParticipants"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Participants"
+        android:text="@string/participants"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -53,7 +56,7 @@
         android:id="@+id/edtParticipants"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Un participant par ligne"
+        android:hint="@string/hint_participants"
         android:inputType="textMultiLine|textEmailAddress"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
@@ -62,13 +65,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewParticipants"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/txtViewRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salle"
+        android:text="@string/room"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -84,19 +88,20 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_dark"
-        android:textSize="11sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewRoom"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/txtViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
+        android:text="@string/date"
         android:textColor="@color/primary_dark"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -108,11 +113,11 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/edtDate"
+        android:id="@+id/edtTime"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:inputType="time"
-        android:hint="Heure de la réunion"
+        android:hint="@string/meeting_time"
         android:textColor="@color/secondary_dark"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,32 +125,35 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewDate"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/btnTime"
-        android:text="Pick time"
+        android:text="@string/date"
         android:textSize="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/btnAddMeeting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.874"
-        app:layout_constraintStart_toEndOf="@+id/edtDate"
+        app:layout_constraintStart_toEndOf="@+id/edtTime"
         app:layout_constraintTop_toBottomOf="@+id/txtViewDate"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="SmallSp" />
 
     <Button
         android:id="@+id/btnAddMeeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="create"
+        android:text="@string/add"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtDate"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/edtTime"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="SmallSp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineV"
@@ -160,6 +168,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="400dp" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
